package modelo.enums;

public enum Turno {
    MANANA,
    TARDE,
    NOCHE
}
